--- a/app/views/users/performances_show/_tennis_perf_show.html.erb
+++ b/app/views/users/performances_show/_tennis_perf_show.html.erb
@@ -1,7 +1,7 @@
 <div class="performance-show-items">
     <div class="performance-show-item">
       <p class="performance-show-title"> Experience </p>
-      <p class="performance-show-data"> <%= user.tennis_exp%> ans </p>
+      <p class="performance-show-data"> <%= pluralize( user.tennis_exp, "an")%> </p>
     </div>
     <div class="perf-divide"> </div>
     <div class="performance-show-item">
