--- a/app/views/users/performances_show/_workout_perf_show.html.erb
+++ b/app/views/users/performances_show/_workout_perf_show.html.erb
@@ -1,7 +1,7 @@
 <div class="performance-show-items">
     <div class="performance-show-item">
       <p class="performance-show-title"> Experience </p>
-      <p class="performance-show-data"> <%= user.workout_exp%> ans </p>
+      <p class="performance-show-data"> <%= pluralize( user.workout_exp, "an")%> </p>
     </div>
     <div class="perf-divide"> </div>
     <div class="performance-show-item">
@@ -11,11 +11,11 @@
     <div class="perf-divide"> </div>
     <div class="performance-show-item">
       <p class="performance-show-title"> Poids au benchpress </p>
-      <p class="performance-show-data"> <%= user.last_workout_perf.benchpress_weight %>kg  </p>
+      <p class="performance-show-data"> <%= user.last_workout_perf.benchpress_weight %> kg  </p>
     </div>
      <div class="perf-divide"> </div>
     <div class="performance-show-item">
       <p class="performance-show-title"> Poids au squats </p>
-      <p class="performance-show-data"> <%= user.last_workout_perf.squat_weight %>kg  </p>
+      <p class="performance-show-data"> <%= user.last_workout_perf.squat_weight %> kg  </p>
     </div>
 </div>
