--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3/dist/chart.min.js"></script>
+    <script> weatherApiKey = "<%= ENV["WEATHER_API_KEY"] %>" </script>
   </head>
 
   <body style="display:flex">
-  
-  <%= javascript_tag do %>
-      weatherApiKey = "<%= ENV["WEATHER_API_KEY"] %>"
-   <% end %>
         <%= render 'layouts/navbar' %>
          <%= render "layouts/alert" %>
         <%= yield%>
