--- a/app/views/static_pages/_hero_lp.html.erb
+++ b/app/views/static_pages/_hero_lp.html.erb
@@ -2,7 +2,7 @@
    <div class="hero-content" >
       <div class="hero-text">
          <h1> Découvrez FitFeat <br> Redécouvrez le sport </h1>
-         <p> Venez découvrir FitFeat, un site hors du commun qui à pour objectif de vous mettre en relation avec d'autres personnes afin de pratiquer un sport commun.</p> 
+         <p> Venez découvrir FitFeat, un site hors du commun qui a pour objectif de vous mettre en relation avec d'autres personnes afin de pratiquer un sport commun.</p> 
             <%= link_to 'Se connecter', new_user_session_path, class: 'button primary'%>
       </div>
       <div class="linear-layer" > </div>
