--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,7 +16,7 @@
 
           <div id="image-conversation" class="offset-md-1"></div>
           <h2 id="title-conversation" class="offset-md-1"> Clique sur le nom de tes amis pour accéder à la conversation</h2>
-          <div class="p-3 scrollable-list " id="message-display">
+          <div class="p-3 scrollable-list mini-scrollable" id="message-display">
           </div>
           <div id="form-message">
           </div>
