transform a link in link_to

--- a/app/views/user_mailer/notification_email.html.erb
+++ b/app/views/user_mailer/notification_email.html.erb
@@ -9,7 +9,8 @@
       Un utilisateur vient de t'ajouter sur Fit Feat!
     </p>
     <p>
-      Connecte-toi vite pour voir tes suggestions : <a href="<%= @url %>"><%= @url %></a>
+      <!-- Connecte-toi vite pour voir tes suggestions : <a href="<%= @url %>"><%= @url %></a> -->
+      <%= link_to "Connecte-toi vite pour voir tes suggestions :", new_user_session_url %>
     </p>
     <p>
         
