--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -9,7 +9,9 @@
       Tu viens de t'inscrire sur Fit Feat et nous t'en félicitons!
     </p>
     <p>
-      Pour accéder à ton espace client, connecte-toi via : <a href="<%= @url %>"><%= @url %></a>
+     <!-- Pour accéder à ton espace client, connecte-toi via : <a href="<%= @url %>"><%= @url %></a> -->
+      <%= link_to "Pour accéder à ton espace client, connecte-toi via :", new_user_session_url %>
+
     </p>
     <p>
       Ton identifiant: <%= @user.email %>
