reset password in french

--- a/app/views/user_mailer/notification_email.html.erb
+++ b/app/views/user_mailer/notification_email.html.erb
@@ -9,8 +9,7 @@
       Un utilisateur vient de t'ajouter sur Fit Feat!
     </p>
     <p>
-      <!-- Connecte-toi vite pour voir tes suggestions : <a href="<%= @url %>"><%= @url %></a> -->
-      <%= link_to "Connecte-toi vite pour voir tes suggestions :", new_user_session_url %>
+      <%= link_to "Clique ici pour te connecter", new_user_session_url %>
     </p>
     <p>
         
