--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <%end%>
 
   <div class="card">
-  <p class="card-title"> Tes prochains evenements  </p>
+  <p class="card-title"> Les prochains evenements  </p>
   <p class="card-icon"> <i class="fa-solid fa-calendar-plus"></i></i> </p> 
 
   <%if @user_events.empty?%>
