--- a/app/views/users/_performance_usershow.html.erb
+++ b/app/views/users/_performance_usershow.html.erb
@@ -28,7 +28,7 @@
       <div class="tab-pane fade" id="v-pills-<%= sport.id%>" role="tabpanel" aria-labelledby="v-pills-<%= sport.id%>-tab">
         <div class="card">
           <p class="card-title"> Performance </p>
-          <p class="card-icon"> <i class="fa-solid fa-pen-to-square" ></i> </p>
+          <p class="card-icon"> <i class="fa-solid fa-trophy"></i> </p>
           <% if sport.name == "Workout" && !@user.workout_perf.empty?%>
             <div> <%= render partial: 'users/performances_show/workout_perf_show', locals: {user: @user}%> </div>
           <%elsif sport.name == "Running" && !@user.running_perf.empty?%>
